--- a/Nauglamir_fw/.settings/com.atollic.truestudio.debug.hardware_device.prefs
+++ b/Nauglamir_fw/.settings/com.atollic.truestudio.debug.hardware_device.prefs
@@ -1,7 +1,7 @@
 BOARD=None
 CODE_LOCATION=FLASH
 ENDIAN=Little-endian
-MCU=STM32L151C8
+MCU=STM32F030F4
 MCU_VENDOR=STMicroelectronics
 MODEL=Pro
 PROBE=ST-LINK
